// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/listPaging matches snapshot on different page 1`] = `
<section
  className="grid-paging"
  role="navigation"
>
  <span
    className="pages"
  >
    deviceLists.paging.pages
  </span>
  <div
    className="page-list"
    role="list"
  >
    <div
      className=""
      key="page_0"
      role="listitem"
    >
      <CustomizedActionButton
        onClick={[Function]}
      >
        1
      </CustomizedActionButton>
    </div>
    <div
      className="selected"
      key="page_1"
      role="listitem"
    >
      <span>
        2
      </span>
    </div>
    <div
      className=""
      key="page_2"
      role="listitem"
    >
      <CustomizedActionButton
        onClick={[Function]}
      >
        »
      </CustomizedActionButton>
    </div>
  </div>
</section>
`;

exports[`components/devices/listPaging matches snapshot with continuation tokens 1`] = `
<section
  className="grid-paging"
  role="navigation"
>
  <span
    className="pages"
  >
    deviceLists.paging.pages
  </span>
  <div
    className="page-list"
    role="list"
  >
    <div
      className="selected"
      key="page_0"
      role="listitem"
    >
      <span>
        1
      </span>
    </div>
    <div
      className=""
      key="page_1"
      role="listitem"
    >
      <CustomizedActionButton
        onClick={[Function]}
      >
        »
      </CustomizedActionButton>
    </div>
  </div>
</section>
`;

exports[`components/devices/listPaging renders nothing with empty continuationTokens 1`] = `<Fragment />`;
